# RPerft

./: .gitignore  Cargo.toml  build.rs  perftdebug.py  perftdebugger.py
benches/: gen_benchmark.rs
src/: bitboard.rs  cache.rs  common.rs  config.rs  constants.rs  engine.rs  evaluate.rs  evaluation.rs  global.rs  globals.rs  hash.rs  interface.rs  lib.rs  magics.rs  main.rs  makemove.rs  move_.rs  movegen.rs  movelist.rs  mv.rs  nnue.rs  perft.rs  position.rs  search.rs  state.rs  tables.rs  transposition.rs  types.rs  uci.rs  zobrist.rs
src/bitboard/: funcs.rs  magics.rs  tables.rs
src/common/: bittools.rs
src/common/bittools/: tests.rs
src/context/: mod.rs
src/engine/: bitboard.rs  common.rs  global.rs  makemove.rs  mod.rs  movelist.rs  position.rs  search.rs  tables.rs  transposition.rs  zobrist.rs
src/engine/common/: bb.rs  bittools.rs  magics.rs  maps.rs  mod.rs
src/engine/evaluation/: mod.rs  weights.rs
src/engine/global/: maps.rs  mod.rs
src/engine/position/: analysis.rs  analysis_tools.rs  data.rs  interface.rs  mod.rs  (+4 more)
src/evaluator/: mod.rs
src/game/: mod.rs
src/global/: maps.rs
src/mechanics/: mod.rs
src/movegen/: tests.rs
src/perft/: cfg.rs  mod.rs  stats.rs  tests.rs
src/position/: analysis.rs  analysis_tools.rs  data.rs  init.rs  interface.rs  mod.rs  parse.rs  pieceset.rs  serialize.rs  states.rs  zobrist.rs
src/search/: bittools.rs  depth_search.rs  mod.rs  move_generation.rs  precompute.rs
src/search_engine/: mod.rs
src/tables/: keys.rs  magics.rs  mod.rs  tables.rs
tests/: perft.rs  position_tests.rs  zobrist.rs
(+10 files in other folders)
