[package]
name = "chess_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
test-case = "2.2.2"
mockall = "0.11.3"
criterion = "0.3"

[[bench]]
name = "gen_benchmark"
harness = false

[profile.test]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1