[package]
name = "chess"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.0"
log = "0.4.17"
env_logger = "0.10.0"
threadpool = "1.8.1"
num_cpus = "1.15.0"
vampirc-uci = "0.11"
static_assertions = "1.1.0"

[dev-dependencies]
test-case = "2.2.2"
mockall = "0.11.3"
criterion = "0.3"

[[bench]]
name = "gen_benchmark"
harness = false

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
